--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Suzi Neves – Shopify · Bookkeeping · Operations</title>
+  <title>Suzi Neves</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
@@ -36,30 +36,29 @@
       padding: 2.5rem 5vw 4rem;
     }
 
-    /* big background movement shapes – no straight lines */
+    /* background movement – soft organic shapes, no hard lines */
     .page::before,
     .page::after {
       content: "";
       position: fixed;
       z-index: -2;
-      inset: -20vh -20vw auto auto;
-      background: radial-gradient(circle at 0% 0%, rgba(182, 99, 73, 0.18), transparent 65%);
+      inset: -25vh -25vw auto auto;
+      background: radial-gradient(circle at 0% 0%, rgba(182, 99, 73, 0.16), transparent 70%);
       opacity: 0.9;
       pointer-events: none;
       mix-blend-mode: multiply;
     }
 
     .page::after {
-      inset: auto auto -25vh -15vw;
-      background: radial-gradient(circle at 100% 100%, rgba(56, 45, 40, 0.35), transparent 70%);
+      inset: auto auto -28vh -18vw;
+      background: radial-gradient(circle at 100% 100%, rgba(56, 45, 40, 0.32), transparent 72%);
       opacity: 0.85;
     }
 
-    /* header strip */
     header {
       position: relative;
       padding-left: clamp(1.5rem, 7vw, 5rem);
-      padding-bottom: 1.25rem;
+      padding-bottom: 1.1rem;
       font-size: 0.8rem;
       text-transform: uppercase;
       letter-spacing: 0.16em;
@@ -68,23 +67,22 @@
 
     .header-name {
       font-weight: 600;
-      margin-bottom: 0.4rem;
+      margin-bottom: 0.3rem;
     }
 
     .header-line {
-      opacity: 0.8;
+      opacity: 0.9;
     }
 
     header::after {
-      /* organic underline, no straight, clean line */
       content: "";
       position: absolute;
       left: clamp(1.5rem, 7vw, 5rem);
       bottom: 0;
-      width: 9rem;
-      height: 1.1rem;
-      background: radial-gradient(circle at 0 100%, rgba(182, 99, 73, 0.42), transparent 70%);
-      transform: rotate(-3.5deg);
+      width: 8.5rem;
+      height: 1.05rem;
+      background: radial-gradient(circle at 0 100%, rgba(182, 99, 73, 0.4), transparent 70%);
+      transform: rotate(-4deg);
       transform-origin: left center;
       pointer-events: none;
     }
@@ -104,19 +102,18 @@
 
     .hero {
       position: relative;
-      padding-top: 1.5rem;
+      padding-top: 1.6rem;
       padding-bottom: 4rem;
     }
 
     .hero::before {
-      /* organic dark swoosh behind hero, no photo */
       content: "";
       position: absolute;
-      inset: -10vh -10vw auto -35vw;
+      inset: -12vh -8vw auto -40vw;
       background:
-        radial-gradient(circle at 10% 10%, rgba(182, 99, 73, 0.9), transparent 70%),
-        radial-gradient(circle at 80% 120%, rgba(30, 20, 19, 0.85), transparent 75%);
-      clip-path: path("M 0 140 C 80 30 220 0 360 40 C 540 90 720 60 900 0 L 900 360 C 720 380 570 360 400 320 C 210 275 80 290 0 360 Z");
+        radial-gradient(circle at 10% 10%, rgba(182, 99, 73, 0.88), transparent 72%),
+        radial-gradient(circle at 85% 120%, rgba(33, 24, 22, 0.9), transparent 75%);
+      clip-path: path("M 0 130 C 80 35 220 0 360 35 C 540 85 720 60 900 0 L 900 330 C 720 350 560 340 390 305 C 210 265 80 285 0 345 Z");
       z-index: -1;
       opacity: 0.96;
       mix-blend-mode: multiply;
@@ -128,13 +125,13 @@
     }
 
     .hero-title {
-      font-size: clamp(1.8rem, 3.1vw, 2.6rem);
-      max-width: 28rem;
+      font-size: clamp(1.9rem, 3.2vw, 2.7rem);
+      max-width: 30rem;
       font-weight: 600;
       letter-spacing: 0.01em;
       color: #ffffff;
       text-shadow: 0 2px 8px rgba(0,0,0,0.28);
-      margin: 0 0 1.4rem;
+      margin: 0 0 1.5rem;
     }
 
     .hero-subtext {
@@ -145,11 +142,11 @@
     }
 
     .hero-subtext p {
-      margin: 0 0 0.4rem;
+      margin: 0 0 0.45rem;
     }
 
     .hero-cta-row {
-      margin-top: 1.7rem;
+      margin-top: 1.9rem;
       display: flex;
       align-items: baseline;
       gap: 1.25rem;
@@ -163,21 +160,21 @@
       text-transform: uppercase;
       color: #fdf2e7;
       cursor: pointer;
-      padding-bottom: 0.2rem;
+      padding-bottom: 0.25rem;
       display: inline-flex;
       align-items: center;
-      gap: 0.35rem;
+      gap: 0.25rem;
     }
 
     .hero-cta::before {
       content: "";
       position: absolute;
-      left: 0;
-      right: 1.1rem;
-      bottom: 0.02rem;
-      height: 1.1rem;
-      background: radial-gradient(circle at 50% 100%, rgba(245, 211, 190, 0.55), transparent 75%);
-      transform: skewX(-8deg);
+      left: -0.3rem;
+      right: 1.4rem;
+      bottom: 0;
+      height: 1.05rem;
+      background: radial-gradient(circle at 50% 100%, rgba(245, 211, 190, 0.6), transparent 78%);
+      transform: skewX(-10deg);
       transform-origin: left center;
       pointer-events: none;
     }
@@ -206,11 +203,11 @@
       opacity: 0.9;
     }
 
-    /* Sections – blended, angled, non-linear */
+    /* SECTIONS */
 
     section {
       position: relative;
-      padding: 3.5rem 0 3.75rem;
+      padding: 3.6rem 0 3.8rem;
     }
 
     .section--what::before,
@@ -218,14 +215,14 @@
     .section--fit::before {
       content: "";
       position: absolute;
-      inset: -3rem -20vw auto auto;
+      inset: -3rem -22vw auto auto;
       pointer-events: none;
       z-index: -1;
     }
 
     .section--what::before {
       background: radial-gradient(circle at 120% -20%, rgba(182, 99, 73, 0.16), transparent 65%);
-      transform: rotate(5deg);
+      transform: rotate(4deg);
     }
 
     .section--how::before {
@@ -255,17 +252,18 @@
     }
 
     .section-body p {
-      margin: 0 0 0.9rem;
+      margin: 0 0 0.95rem;
     }
 
-    /* fit / not fit split without boxes */
+    /* FIT / NOT FIT layout – split but no boxes */
 
     .fit-grid {
       display: grid;
       grid-template-columns: minmax(0, 1.2fr) minmax(0, 1fr);
-      gap: 2.25rem;
+      gap: 2.2rem;
       max-width: 45rem;
       align-items: start;
+      position: relative;
     }
 
     .fit-col-heading {
@@ -282,32 +280,31 @@
     }
 
     .fit-grid::after {
-      /* faint organic “divider” – not a straight line */
       content: "";
       position: absolute;
       left: 50%;
-      top: 0.4rem;
-      width: 0.9rem;
+      top: 0.5rem;
+      width: 1.2rem;
       height: 5.2rem;
-      background: radial-gradient(circle at 50% 0%, rgba(182, 99, 73, 0.35), transparent 72%);
-      transform: translateX(-50%) skewX(-14deg);
+      background: radial-gradient(circle at 50% 0%, rgba(182, 99, 73, 0.34), transparent 74%);
+      transform: translateX(-50%) skewX(-16deg);
       pointer-events: none;
-      opacity: 0.9;
+      opacity: 0.95;
     }
 
     .section--fit {
-      padding-bottom: 4.5rem;
+      padding-bottom: 4.6rem;
     }
 
-    /* responsive tweaks */
+    /* responsive */
 
     @media (max-width: 840px) {
       .flow {
-        margin-right: 2.2rem;
+        margin-right: 2.1rem;
       }
 
       .hero::before {
-        inset: -14vh -18vw auto -60vw;
+        inset: -14vh -14vw auto -60vw;
       }
     }
 
@@ -334,7 +331,7 @@
       }
 
       .hero::before {
-        inset: -18vh -25vw auto -70vw;
+        inset: -18vh -25vw auto -72vw;
       }
 
       .hero-cta-row {
